[package]
name = "imagecodes"
version = "0.6.2-alpha.0"
authors = ["Philipp Hansch <dev@phansch.net>"]
edition = "2018"
publish = false

[dependencies]
qrcode = "0.12.0"
image = "0.23.7"
barcoders = {version = "1.0.1", features = ["image", "svg"]}
mime = "0.3.13"

proptest = "0.10.1"

# Webserver/Async stuff
tide = "0.13.0"
http-types = "2.4"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes"]

[dev-dependencies]
pretty_assertions = "0.6.1"

[profile.dev]
opt-level = 2
