[package]
name = "imagecodes"
version = "0.6.2-alpha.0"
authors = ["Philipp Hansch <dev@phansch.net>"]
edition = "2018"
publish = false

[dependencies]
qrcode = "0.12.0"
image = "0.23.10"
barcoders = {version = "1.0.2", features = ["image", "svg"]}
mime = "0.3.13"

proptest = "1.0.0"

# Webserver/Async stuff
tide = "0.16.0"
http-types = "2.5"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dev-dependencies]
pretty_assertions = "0.6.1"

[profile.dev.package.difference]
opt-level = 3
